Fix modal header text alignment

--- a/src/scss/transplant/layout/_header.scss
+++ b/src/scss/transplant/layout/_header.scss
@@ -168,4 +168,7 @@
 			}
 		}
 	}
+    .request-demo {
+        text-align: left;
+    }
 }
